--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "black>=23.12.1",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
