--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 authors = [
     { name = "m_tsuru", email = "147146974+m-tsuru@users.noreply.github.com" }
 ]
-dependencies = []
+dependencies = [
+    "textual>=0.47.1",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
