--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "black>=23.12.1",
+    "textual-dev>=1.4.0",
 ]
 
 [tool.hatch.metadata]
